<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012-2013 Tobias Brunner
    Copyright (C) 2012 Giuliano Grassi
    Copyright (C) 2012 Ralf Sager
    Hochschule fuer Technik Rapperswil

    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2 of the License, or (at your
    option) any later version.  See <http://www.fsf.org/copyleft/gpl.txt>.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
    or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
    for more details.
-->
<resources>

    <!-- Application -->
    <string name="app_name">strongSwan VPN Client</string>
    <string name="main_activity_name">strongSwan</string>
    <string name="show_log">View log</string>
    <string name="search">Search</string>
    <string name="vpn_not_supported_title">VPN not supported</string>
    <string name="vpn_not_supported">Your device does not support VPN applications.\nPlease contact the manufacturer.</string>
    <string name="vpn_not_supported_during_lockdown">VPN connections are not supported in lockdown mode.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="profile_not_found">Profile not found</string>
    <string name="strongswan_shortcut">strongSwan shortcut</string>

    <!-- Log view -->
    <string name="log_title">Log</string>
    <string name="send_log">Send log file</string>
    <string name="empty_log">Log file is empty</string>
    <string name="log_mail_subject">strongSwan %1$s Log File</string>

    <!-- VPN profile list -->
    <string name="no_profiles">No VPN profiles.</string>
    <string name="add_profile">Add VPN profile</string>
    <string name="edit_profile">Edit</string>
    <string name="delete_profile">Delete</string>
    <string name="select_profiles">Select profiles</string>
    <string name="profiles_deleted">Selected profiles deleted</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="one_profile_selected">One profile selected</string>
    <string name="x_profiles_selected">%1$d profiles selected"</string>

    <!-- VPN profile details -->
    <string name="profile_edit_save">Save</string>
    <string name="profile_edit_cancel">Cancel</string>
    <string name="profile_name_label">Profile Name:</string>
    <string name="profile_name_hint">(use gateway address)</string>
    <string name="profile_gateway_label">Gateway:</string>
    <string name="profile_vpn_type_label">Type:</string>
    <string name="profile_username_label">Username:</string>
    <string name="profile_password_label">Password:</string>
    <string name="profile_password_hint">(prompt when needed)</string>
    <string name="profile_user_certificate_label">User certificate:</string>
    <string name="profile_user_select_certificate_label">Select user certificate</string>
    <string name="profile_user_select_certificate">Select a specific user certificate</string>
    <string name="profile_ca_label">CA certificate:</string>
    <string name="profile_ca_auto_label">Select automatically</string>
    <string name="profile_ca_select_certificate_label">Select CA certificate</string>
    <string name="profile_ca_select_certificate">Select a specific CA certificate</string>
    <!-- Warnings/Notifications in the details view -->
    <string name="alert_text_no_input_gateway">Please enter the gateway address here</string>
    <string name="alert_text_no_input_username">Please enter your username here</string>
    <string name="alert_text_nocertfound_title">No CA certificate selected</string>
    <string name="alert_text_nocertfound">Please select one or activate <i>Select automatically</i></string>
    <string name="tnc_notice_title">EAP-TNC may affect your privacy</string>
    <string name="tnc_notice_subtitle">Device data is sent to the gateway operator</string>
    <string name="tnc_notice_details">&lt;p>Trusted Network Connect (TNC) allows gateway operators to assess the health of a client device.&lt;/p>&lt;p>For that purpose the gateway operator may request data such as a unique identifier, a list of installed packages, system settings, or cryptographic checksums of files.&lt;/p>&lt;b>Any data will be sent only after verifying the gateway\'s identity.&lt;/b></string>

    <!-- Trusted certificate selection -->
    <string name="trusted_certs_title">CA certificates</string>
    <string name="no_certificates">No certificates</string>
    <string name="reload_trusted_certs">Reload CA certificates</string>
    <string name="system_tab">System</string>
    <string name="user_tab">User</string>
    <string name="local_tab">Imported</string>
    <string name="delete_certificate_question">Delete certificate?</string>
    <string name="delete_certificate">The certificate will be permanently removed!</string>
    <string name="import_certificate">Import certificate</string>
    <string name="cert_imported_successfully">Certificate successfully imported</string>
    <string name="cert_import_failed">Failed to import certificate</string>

    <!-- VPN state fragment -->
    <string name="state_label">Status:</string>
    <string name="profile_label">Profile:</string>
    <string name="disconnect">Disconnect</string>
    <string name="state_connecting">Connecting&#8230;</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnecting">Disconnecting&#8230;</string>
    <string name="state_disabled">No active VPN</string>
    <string name="state_error">Error</string>

    <!-- IMC state fragment -->
    <string name="imc_state_label">Assessment:</string>
    <string name="imc_state_isolate">Restricted</string>
    <string name="imc_state_block">Failed</string>
    <string name="show_remediation_instructions">View remediation instructions</string>

    <!-- Remediation instructions -->
    <string name="remediation_instructions_title">Remediation instructions</string>

    <!-- Dialogs -->
    <string name="login_title">Enter password to connect</string>
    <string name="login_confirm">Connect</string>
    <string name="error_introduction">Failed to establish VPN:</string>
    <string name="error_lookup_failed">Gateway address lookup failed.</string>
    <string name="error_unreachable">Gateway is unreachable.</string>
    <string name="error_peer_auth_failed">Verifying gateway authentication failed.</string>
    <string name="error_auth_failed">User authentication failed.</string>
    <string name="error_assessment_failed">Security assessment failed.</string>
    <string name="error_generic">Unspecified failure while connecting.</string>
    <string name="connecting_title">Connecting: %1$s</string>
    <string name="connecting_message">Establishing VPN with \""%1$s\".</string>
    <string name="vpn_connected">VPN connected</string>
    <string name="vpn_profile_connected">This VPN profile is currently connected!</string>
    <string name="reconnect">Reconnect</string>
    <string name="connect_profile_question">Connect %1$s?</string>
    <string name="replaces_active_connection">This will replace your active VPN connection!</string>
    <string name="connect">Connect</string>

    <string name="vip_node">VIP Node</string>
    <string name="line_delay">Line/Delay</string>
    <string name="select_the_node_server">Select the Node Server</string>
    <string name="_17vpn">科学上网 17vpn</string>
    <string name="vpn_name">点击连接</string>
    <string name="free1">Free1</string>
    <string name="not_connected">Not Connected</string>
    <string name="intelligent">Intelligent</string>
    <string name="global">Global</string>

    <string name="account_information">Account Information</string>
    <string name="residual_flow_0_19g">Residual Flow: 0.19g</string>
    <string name="simultaneous_login_1_device">Simultaneous Login:1 device</string>
    <string name="has_be_2019_12_2016">Has BE: 2019-12-2016</string>
    <string name="share">Share</string>
    <string name="common_problems">Common Problems</string>
    <string name="site_navigation">Site Navigation</string>
    <string name="contact_us">Contact Us</string>
</resources>
