<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:text="@string/_17vpn"
            android:textAlignment="center"
            android:textColor="@color/colorTheme"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/layout_info"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/text_home"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/shape_round"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_currentvpn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/vpn_name"
                android:textAlignment="center"
                android:textColor="@color/colorTheme"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLLCountryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_info"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorTheme">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/iv_first"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/share" />

                    <TextView
                        android:id="@+id/tv_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toEndOf="@id/iv_first"
                        android:layout_toRightOf="@id/iv_first"
                        android:text="@string/free1"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toEndOf="@id/tv_free"
                        android:layout_toRightOf="@id/tv_free"
                        android:gravity="right"
                        android:text="@string/not_connected"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorTheme"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/iv_first1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_setting" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@id/iv_third1"
                        android:layout_toLeftOf="@id/iv_third1"
                        android:layout_toEndOf="@id/iv_first1"
                        android:layout_toRightOf="@id/iv_first1"
                        android:background="@color/colorWhite"
                        android:text="@string/intelligent"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/iv_third1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorWhite"
                        android:padding="10dp"
                        android:text="@string/global"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/mIvPicture"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_below="@+id/mLLCountryName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp" />
    </RelativeLayout>
</RelativeLayout>