<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/account_information"
            android:textAlignment="center"
            android:textColor="@color/colorTheme"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_home"
            android:layout_margin="20dp"
            android:background="@drawable/shape_round_square"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/icon1" />

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/residual_flow_0_19g"
                android:textColor="@color/colorTheme" />

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/simultaneous_login_1_device"
                android:textColor="@color/colorTheme" />

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/has_be_2019_12_2016"
                android:textColor="@color/colorTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_info"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/mCvShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorTheme">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/iv_first4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/share" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@id/iv_third4"
                        android:layout_toLeftOf="@id/iv_third4"
                        android:layout_toEndOf="@id/iv_first4"
                        android:layout_toRightOf="@id/iv_first4"
                        android:text="@string/share"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/iv_third4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:src="@drawable/icon6" />

                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorTheme">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/iv_first"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/question_mark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@id/iv_third"
                        android:layout_toLeftOf="@id/iv_third"
                        android:layout_toEndOf="@id/iv_first"
                        android:layout_toRightOf="@id/iv_first"
                        android:text="@string/common_problems"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/iv_third"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:src="@drawable/icon6" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorTheme">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/iv_first1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_menu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@id/iv_third1"
                        android:layout_toLeftOf="@id/iv_third1"
                        android:layout_toEndOf="@id/iv_first1"
                        android:layout_toRightOf="@id/iv_first1"
                        android:text="@string/site_navigation"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/iv_third1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:src="@drawable/icon6" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorTheme">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/iv_first2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/contact_us" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@id/iv_third2"
                        android:layout_toLeftOf="@id/iv_third2"
                        android:layout_toEndOf="@id/iv_first2"
                        android:layout_toRightOf="@id/iv_first2"
                        android:text="@string/contact_us"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/iv_third2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:src="@drawable/icon6" />

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
